# advent-of-code-2025-ocaml

./: .gitignore  advent-of-code-2025-ocaml.opam  advent-of-code-2025-ocaml.opam.locked  dune-project
lib/: day01.ml  day02.ml  day02.mli  day03.ml  dune
test/: dune  test_advent_of_code_2025_ocaml.ml  test_day02.ml
